PR/48729: Torbjörn Granlund: Avoid negative index in array ref.